fix overlapping of time and controls on smaller screens; fix ad time popping under control bar

--- a/fluidplayer.css
+++ b/fluidplayer.css
@@ -383,7 +383,7 @@
 .fluid_video_wrapper.fluid_player_layout_default .fluid_controls_container .fluid_fluid_control_duration {
     display: inline-block;
     position: absolute;
-    left: 105px;
+    left: 40px;
     height: 24px;
     font-family: 'Roboto', sans-serif;
     font-size: 13px;
@@ -604,6 +604,7 @@ _:-ms-lang(x),
     -ms-transition: opacity 0.3s ease-in-out;
     -o-transition: opacity 0.3s ease-in-out;
     transition: opacity 0.3s ease-in-out;
+    display: none;
 }
 
 .fluid_video_wrapper.fluid_player_layout_default .fluid_controls_container .fluid_controls_right .fluid_control_volume_container:hover {
@@ -949,4 +950,13 @@ _:-ms-lang(x),
 
 .source_selected {
     opacity: 1 !important;
+}
+
+@media only screen and (min-device-width: 375px) {
+    .fluid_video_wrapper.fluid_player_layout_default .fluid_controls_container .fluid_fluid_control_duration {
+        left: 105px;
+    }
+    .fluid_video_wrapper.fluid_player_layout_default .fluid_controls_container .fluid_controls_right .fluid_control_volume_container {
+        display: block;
+    }
 }
